# sierra-emu

./: .gitignore  Cargo.toml  Makefile  README.md  contract_trace.json  corelib  output5.sierra
.github/workflows/: ci.yml
programs/: circuits.cairo  circuits_failure.cairo
src/: args.rs  debug.rs  dump.rs  gas.rs  lib.rs  main.rs  starknet.rs  test_utils.rs  utils.rs  value.rs  vm.rs
src/starknet/: block_info.rs  execution_info_v2.rs  resource_bounds.rs  secp256k1_point.rs  secp256r1_point.rs  tx_info.rs  tx_v2_info.rs  u256.rs
src/vm/: ap_tracking.rs  array.rs  bool.rs  bounded_int.rs  box.rs  branch_align.rs  bytes31.rs  cast.rs  circuit.rs  const.rs  drop.rs  dup.rs  ec.rs  enum.rs  felt252.rs  felt252_dict.rs  felt252_dict_entry.rs  function_call.rs  gas.rs  int128.rs  jump.rs  mem.rs  pedersen.rs  snapshot_take.rs  starknet.rs  struct.rs  u128.rs  uint128.rs  uint16.rs  uint252.rs  uint32.rs  uint512.rs  uint64.rs  uint8.rs
tests/: libfuncs.rs  syscalls.rs
