[package]
name = "sierra-emu"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-sierra = "2.7.0"
cairo-lang-utils = "2.7.0"
clap = { version = "4.5.11", features = ["derive"] }
k256 = "0.13.3"
keccak = "0.1.5"
num-bigint = "0.4.6"
p256 = "0.13.2"
sec1 = { version = "0.7.3", features = ["std"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sha2 = { version = "0.10.8", features = ["compress"] }
smallvec = "1.13.2"
starknet-crypto = "0.7.1"
starknet-types-core = "0.1.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
cairo-lang-compiler = "2.7.0"
cairo-lang-starknet = "2.7.0"
